# screenpipe

./: .gitignore  Cargo.toml  README.md
.claude/skills/render-html-report/: SKILL.md
.claude/skills/screenpipe-api/: SKILL.md
.claude/skills/screenpipe-cli/: SKILL.md
.github/scripts/: assert_windows_audio_rms.ps1  setup_display.sh
.github/workflows/: ci.yml  e2e-test.yml  eval-diarization.yml  eval-meeting-detection.yml  release-app.yml  release-cli.yml  release-enterprise-windows.yml  release-enterprise.yml  style.yml  test-frontend.yml  windows-integration-test.yml
apps/lib/utils/: tauri.ts
apps/screenpipe-app-tauri/: package.json
apps/screenpipe-app-tauri/app/: globals.css  layout.tsx
apps/screenpipe-app-tauri/components/: browser-pairing-dialog.tsx  browser-sidebar.tsx  chat-sidebar.tsx  (+6 more)
apps/screenpipe-app-tauri/src-tauri/: Cargo.toml  tauri.conf.json  tauri.prod.conf.json
apps/screenpipe-app-tauri/src-tauri/src/: agent_event_emitter.rs  analytics.rs  capture_session.rs  chatgpt_oauth.rs  commands.rs  disk_usage.rs  dock_menu.rs  embedded_server.rs  enterprise_sync.rs  health.rs  main.rs  meeting_live_notes.rs  monitor_events.rs  oauth.rs  owned_browser.rs  owned_browser_cookies.rs  permission_events.rs  permissions.rs  pi.rs  pi_command_queue.rs  recording.rs  secrets.rs  server.rs  server_core.rs  shortcuts.rs  space_monitor.rs  store.rs  tray.rs  updates.rs  viewer.rs  windows_overlay.rs  windows_webview_env.rs
apps/screenpipe-app-tauri/src-tauri/src/notifications/: client.rs  rewrite.rs
apps/screenpipe-app-tauri/src-tauri/src/window/: content_process.rs  mod.rs  show.rs
apps/screenpipe-app-tauri/src-tauri/tests/: enterprise_sync_test.rs  shutdown_tasks.rs
crates/screenpipe-a11y/: Cargo.toml
crates/screenpipe-a11y/examples/: linux_e2e.rs
crates/screenpipe-a11y/src/: config.rs
crates/screenpipe-a11y/src/platform/: macos.rs  windows.rs  windows_uia.rs
crates/screenpipe-a11y/src/tree/: cache.rs  electron_docs.rs  enhanced_mode_cache.rs  linux.rs  macos.rs  macos_lines.rs  mod.rs  windows.rs
crates/screenpipe-audio/: Cargo.toml  build.rs
crates/screenpipe-audio-eval/: Cargo.toml
crates/screenpipe-audio-eval/evals/: README.md  download_voxconverse.sh
crates/screenpipe-audio/examples/: bench_engines.rs  bench_quality.rs  bench_quality2.rs
crates/screenpipe-audio/src/: lib.rs
crates/screenpipe-audio/src/audio_manager/: builder.rs  manager.rs  reconciliation.rs
crates/screenpipe-audio/src/core/: device.rs  device_detection.rs  mod.rs  run_record_and_transcribe.rs  stream.rs
crates/screenpipe-audio/src/device/: device_manager.rs
crates/screenpipe-audio/src/meeting_streaming/: config.rs  controller.rs  deepgram_live.rs  events.rs  mod.rs  net.rs  openai_realtime.rs  selected_engine.rs
crates/screenpipe-audio/src/models/: download.rs  mod.rs
crates/screenpipe-audio/src/segmentation/: segmentation_manager.rs
crates/screenpipe-audio/src/speaker/: embedding_manager.rs  mod.rs  models.rs  segment.rs
crates/screenpipe-audio/src/transcription/: diarization.rs  engine.rs  handle_new_transcript.rs  mod.rs  stt.rs  transcription_result.rs
crates/screenpipe-audio/src/transcription/deepgram/: batch.rs  mod.rs
crates/screenpipe-audio/src/transcription/openai_compatible/: batch.rs  mod.rs
crates/screenpipe-audio/src/utils/: ffmpeg.rs
crates/screenpipe-audio/tests/: core_tests.rs  speaker_identification.rs
crates/screenpipe-audio/tests/audio_pipeline_benchmark/: meeting_benchmark.rs
crates/screenpipe-connect/: Cargo.toml
crates/screenpipe-connect/src/: calendar.rs  oauth.rs
crates/screenpipe-connect/src/connections/: bee.rs  calcom.rs  email.rs  microsoft365.rs  mod.rs  ntfy.rs  perplexity.rs  posthog.rs  pushover.rs  quickbooks.rs  slack.rs  teams.rs  vercel.rs
crates/screenpipe-connect/src/connections/browser/: bridge.rs  mod.rs
crates/screenpipe-connect/src/whatsapp/: mod.rs
crates/screenpipe-engine/: Cargo.toml  build.rs
crates/screenpipe-engine/src/: auth_key.rs  calendar_speaker_id.rs  cli_reminder.rs  connections_api.rs  event_driven_capture.rs  meeting_detector.rs  paired_capture.rs  pipe_store.rs  pipes_api.rs  privacy_filter.rs  recording_config.rs  server.rs  ui_recorder.rs
crates/screenpipe-engine/src/cli/: mod.rs  pipe.rs  presets.rs
crates/screenpipe-engine/src/routes/: activity_summary.rs  audio.rs  cloud_proxy.rs  content.rs  health.rs  meetings.rs  mod.rs  retranscribe.rs  search.rs  streaming.rs  transcribe.rs
crates/screenpipe-engine/src/vision_manager/: monitor_watcher.rs
crates/screenpipe-engine/tests/: tags_test.rs
crates/screenpipe-meeting-eval/: Cargo.toml
crates/screenpipe-meeting-eval/evals/: README.md
crates/screenpipe-meeting-eval/evals/scenarios/: arc_meet_toolbar_autohide.toml  browser_tab_switch_with_audio.toml  confirming_drops_no_meeting.toml  native_zoom_minimized_with_audio.toml  zoom_native_clean_call.toml
crates/screenpipe-meeting-eval/src/: lib.rs
crates/screenpipe-redact/: Cargo.toml
crates/screenpipe-redact/examples/: tinfoil_probe.rs
crates/screenpipe-redact/src/: cache.rs  error.rs  lib.rs  pipeline.rs  span.rs
crates/screenpipe-redact/src/adapters/: mod.rs  onnx.rs  opf.rs  regex.rs  rfdetr.rs  rfdetr_mlx.rs  tinfoil.rs  tinfoil_image.rs
crates/screenpipe-redact/src/image/: frame_redactor.rs  mod.rs  worker.rs
crates/screenpipe-redact/src/worker/: mod.rs  tables.rs
crates/screenpipe-redact/tests/: opf_integration.rs  worker_integration.rs
crates/screenpipe-rfdetr-mlx/: Cargo.toml  README.md
crates/screenpipe-rfdetr-mlx/src/: lib.rs  postprocess.rs  transformer.rs  util.rs  weights.rs
crates/screenpipe-rfdetr-mlx/src/backbone/: dinov2.rs  encoder_block.rs  mod.rs  projector.rs  windowed_attn.rs
crates/screenpipe-rfdetr-mlx/src/decoder/: heads.rs  layer.rs  mod.rs  object_queries.rs
crates/screenpipe-rfdetr-mlx/src/deformable_attn/: grid_sample.rs  mod.rs
crates/screenpipe-rfdetr-mlx/src/encoder/: layer.rs  mod.rs  positional.rs
docs/mintlify/: validate-docs.mjs
ee/desktop-rust/: enterprise_sync.rs  enterprise_upload.rs
(+148 files in other folders)
