[package]
name = "screenpipe-a11y"
version = "0.1.0"
edition = "2021"
description = "Accessibility and UI event capture for screenpipe - keyboard, mouse, clipboard"
license = "MIT"

[features]
default = []
db = ["screenpipe-db"]

[dependencies]
screenpipe-db = { path = "../screenpipe-db", optional = true }
screenpipe-core = { path = "../screenpipe-core" }
# Core
anyhow = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Concurrency
crossbeam-channel = "0.5"
parking_lot = "0.12"
arc-swap = "1"

# Regex for privacy patterns
regex = "1.10"

# Clipboard access (native NSPasteboard/Win32/X11 — no subprocess)
arboard = "3"

# Cross-platform user-config dir for electron_docs path resolution
# (Obsidian / VS Code fork state files live under `dirs::config_dir()`
# on every supported OS — `~/Library/Application Support` on macOS,
# `%APPDATA%` on Windows, `~/.config` on Linux).
dirs = "5.0"

# VS Code fork document_path resolution reads `state.vscdb` (SQLite).
# Pinned to 0.29 because that's the last release on libsqlite3-sys 0.26 —
# same version screenpipe-db pins, so adding this does not pull a second
# copy of the C library into the workspace. `bundled` ensures we ship our
# own SQLite on every OS rather than depending on the system's.
rusqlite = { version = "0.29", features = ["bundled"] }

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { version = "0.13", features = ["ax", "cg", "blocks", "ns", "app", "dispatch"] }

[target.'cfg(target_os = "windows")'.dependencies]
# Native Windows APIs - no rdev dependency
windows-core = "0.58"
windows = { version = "0.58", features = [
    "implement",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
] }

[target.'cfg(target_os = "linux")'.dependencies]
# AT-SPI2 accessibility via D-Bus (pure Rust, no system deps for compilation)
zbus = { version = "5", features = ["blocking"] }
# Input device events from /dev/input/event*
evdev = "0.13"
# fcntl for non-blocking I/O on evdev fds
libc = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
# Linux debug examples are compiled by `cargo clippy --all-targets` on every
# developer OS, so keep their D-Bus dependency available outside Linux too.
zbus = { version = "5", features = ["blocking"] }

[target.'cfg(target_os = "macos")'.dev-dependencies]
libc = "0.2"
