[package]
name = "screenpipe-audio"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
reqwest = { workspace = true }
which = "7.0.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oasgen = { workspace = true }

# Cross-platform audio capture
# Using fork with unified cidre version (compatible with sck-rs)
cpal = { git = "https://github.com/divanshu-go/screenpipe-cpal.git", rev = "070548661878f0aac2d1c2ba445ef2d6ed18705f" }

# Wav encoding
hound = "3.5"

# MP3 encoding for compressed cloud uploads
mp3lame-encoder = "0.2.2"

# Cli ! shouldn't be required if using as lib
clap = { version = "4.3", features = ["derive"] }

# Dates
chrono = { version = "0.4.31", features = ["serde"] }

# Local Embeddings + STT
# Using fork of vad-rs with Silero VAD v5/v6 support
# v5/v6: 3x faster, 6000+ languages, better accuracy
vad-rs = { git = "https://github.com/divanshu-go/vad-rs-1.git", branch="main", default-features = false }
anyhow = "1.0.86"
hf-hub = { workspace = true }
# https://github.com/pdeljanov/Symphonia/tree/master?tab=readme-ov-file#optimizations
symphonia = { version = "0.5.4", features = ["aac", "isomp4", "opt-simd"] }
rubato = "0.15.0"
whisper-rs = { git = "https://github.com/screenpipe/whisper-rs.git", rev = "97e4070", features = ["tracing_backend"] }

# Log
log = { workspace = true }
tracing = { workspace = true }
env_logger = "0.10"

# Bytes
bytemuck = "1.16.1"

# Async
tokio = { workspace = true }

# Detect speech/silence
webrtc-vad = "0.4.0"

# Deepgram
reqwest = { workspace = true }

screenpipe-core = { path = "../screenpipe-core" }
screenpipe-events = { path = "../screenpipe-events" }
screenpipe-config = { path = "../screenpipe-config" }
screenpipe-db = { path = "../screenpipe-db" }

# crossbeam
crossbeam = { workspace = true }
dashmap = { workspace = true }

# Directories
dirs = "5.0.1"

sysinfo = "0.29.0"
lazy_static = { version = "1.4.0" }
realfft = "3.4.0"
ndarray = "0.16"
# Base ort dep — each platform overrides with specific features below
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["ndarray", "half"] }
ort-sys = { version = "=2.0.0-rc.10", default-features = false }
knf-rs = "0.3.2"
futures = "0.3.31"
audiopipe = { git = "https://github.com/divanshu-go/audiopipe.git", branch = "main", default-features = false, features = ["qwen3-asr-antirez-blas", "parakeet"], optional = true }
mlx-rs = { version = "0.25", optional = true }
bytes = { version = "1.9.0", features = ["serde"] }
rand = "0.9.0"

[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = { version = "2.28", optional = true }
libpulse-simple-binding = { version = "2.28", optional = true }
# Bundle ONNX Runtime on Linux (same as macOS). load-dynamic was tried but
# broke systems without a system-installed libonnxruntime.so (see #2506).
ort = { version = "=2.0.0-rc.10", features = ["download-binaries"] }

# Windows COM API for querying the "Default Communications Device" role.
# MS Teams/Zoom route audio to the eCommunications endpoint, which may
# differ from the multimedia/console default that cpal returns.
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_Devices_FunctionDiscovery",
    "Win32_UI_Shell_PropertiesSystem",
] }

[target.'cfg(all(target_os = "windows", target_arch = "x86_64"))'.dependencies]
ort = { version = "=2.0.0-rc.10", features = [
  "download-binaries",
  "copy-dylibs",
] }
esaxx-rs = "0.1.10"
samplerate = { version = "0.2.4" }
libsamplerate-sys = "0.1.10"

# Windows ARM64: use our own ONNX Runtime DLL at runtime (load-dynamic); no compile-time link, no ort.pyke.io cache
[target.'cfg(all(target_os = "windows", target_arch = "aarch64"))'.dependencies]
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["load-dynamic"] }
ort-sys = { version = "=2.0.0-rc.10", default-features = false }
esaxx-rs = "0.1.10"
samplerate = { version = "0.2.4" }
libsamplerate-sys = "0.1.10"

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { git = "https://github.com/yury/cidre.git" }
once_cell = "1.17.1"
objc = "0.2.7"
ort = { version = "=2.0.0-rc.10", features = ["download-binaries"] }

[dev-dependencies]
tempfile = "3.3.0"
infer = "0.15"
criterion = { workspace = true }
strsim = "0.10.0"
futures = "0.3.31"
tracing-subscriber = "0.3.16"


[features]
default = ["pulseaudio"]
metal = ["whisper-rs/metal", "audiopipe?/metal", "audiopipe?/coreml"]
cuda = ["whisper-rs/cuda"]
directml = ["audiopipe?/directml"]
vulkan = ["audiopipe?/vulkan-ggml"]
pulseaudio = ["dep:libpulse-binding", "dep:libpulse-simple-binding"]
qwen3-asr = ["dep:audiopipe"]
parakeet = ["dep:audiopipe"]
parakeet-mlx = ["dep:audiopipe", "audiopipe?/parakeet-mlx", "dep:mlx-rs"]

[[example]]
name = "screenpipe-audio"
path = "examples/screenpipe-audio.rs"

[[test]]
name = "audio_pipeline_benchmark"
path = "tests/audio_pipeline_benchmark/main.rs"

[package.metadata.cargo-machete]
ignored = ["ort-sys", "bytes", "mlx-rs"]
