[package]
name = "screenpipe-engine"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
oasgen = { workspace = true }

screenpipe-events = { path = "../screenpipe-events" }
screenpipe-screen = { path = "../screenpipe-screen" }
screenpipe-audio = { path = "../screenpipe-audio" }
screenpipe-core = { path = "../screenpipe-core", features = ["security", "cloud-sync", "secrets"] }
screenpipe-db = { path = "../screenpipe-db" }
screenpipe-redact = { path = "../screenpipe-redact", features = ["opf-text"] }
screenpipe-a11y = { path = "../screenpipe-a11y", features = ["db"] }
screenpipe-apple-intelligence = { path = "../screenpipe-apple-intelligence", optional = true }
screenpipe-config = { path = "../screenpipe-config" }
screenpipe-connect = { path = "../screenpipe-connect" }
screenpipe-vault = { path = "../screenpipe-vault" }
screenpipe-secrets = { path = "../screenpipe-secrets" }


# Image processing
image = { workspace = true }
imageproc = "0.25"

# Dates
chrono = { version = "0.4.31", features = ["serde"] }

# Database
sqlx = { version = "0.7", features = [
    "sqlite",
    "runtime-tokio-rustls",
    "chrono",
    "migrate",
] }

anyhow = "1.0.86"
async-trait = "0.1"
moka = { version = "0.12", features = ["future"] }

#opentelemetry
sentry = { workspace = true }

# Server
axum = { version = "0.7.5", features = ["ws", "multipart"] }
http-body-util = "0.1"
tokio = { version = "1.15", features = ["full", "tracing"] }
tokio-stream = "0.1"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }

# Log
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
console-subscriber = { version = "0.4.1", optional = true }
# Cli ! shouldn't be required if using as lib
clap = { version = "4.3", features = ["derive", "env"] }

# Memory watchdog
sysinfo = "0.29.0"

# Color
colored = "2.0"

# Plugins
futures = { version = "0.3.31", features = ["std"] }

# Directory management
dirs = "5.0"

# Password input (no-echo for vault CLI)
rpassword = "5"

# Client http
reqwest = { workspace = true }

# Tinfoil enclave attestation: AMD SEV-SNP attestation + Sigstore code-provenance
# verification + TLS cert pinning for the privacy-filter PII redaction service
# (see src/privacy_filter.rs). Without this, a MITM or compromised CA could
# observe unredacted text on its way to the enclave.
# Upstream tinfoilsh/tinfoil-rs main, post-#21 (the ring-backend fix).
tinfoil = { git = "https://github.com/tinfoilsh/tinfoil-rs" }

# Concurrency
crossbeam = { workspace = true }

# base64
base64 = "0.22.1"

uuid = { version = "1.5.0", features = ["v4"] }

# Used by /connections/browsers/:id/navigate to validate URLs up-front so
# clients get 400 (client error) on malformed input rather than 502 from
# the upstream eval transport.
url = "2"

# Cloud sync utilities
hostname = "0.4"
md5 = "0.7"

tempfile = "3.3.0"


# Bincode for serializing hot cache
bincode = "1.3.3"

# SHA256 for hashing
sha2 = "0.10.6"

# Fast random number generator
fastrand = "2.1.1"
port_check = "0.2.1"

regex = "1.10.0"

lru = "0.16.3"
tokio-util = { version = "0.7", features = ["io"] }

once_cell = { workspace = true }
dashmap = { workspace = true }
arc-swap = "1"

# Heap profiling (opt-in via --features heap-prof)
dhat = { version = "0.3", optional = true }

# jemalloc — aggressively returns freed pages to OS, reducing RSS bloat from fragmentation.
# Default allocator on macOS/Linux. Not used on Windows (unsupported).
[target.'cfg(not(target_os = "windows"))'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }

[dev-dependencies]
env_logger = "0.10"
tempfile = "3.3.0"
tokio-tungstenite = "0.24"
tower = { version = "0.4", features = ["util"] }

# Benches
criterion = { workspace = true }

[features]
default = ["qwen3-asr", "parakeet"]
metal = ["screenpipe-audio/metal"]
heap-prof = ["dhat"]
cuda = ["screenpipe-audio/cuda"]
directml = ["screenpipe-audio/directml"]
vulkan = ["screenpipe-audio/vulkan"]
debug-console = ["console-subscriber"]
pulseaudio = ["screenpipe-audio/pulseaudio"]
apple-intelligence = ["dep:screenpipe-apple-intelligence"]
qwen3-asr = ["screenpipe-audio/qwen3-asr"]
parakeet = ["screenpipe-audio/parakeet"]
parakeet-mlx = ["screenpipe-audio/parakeet-mlx"]
# Image-PII detector via MLX (Apple Silicon-only). Off by default;
# Mac release builds opt in to pick up the ~6× speedup over the ONNX
# CoreML EP path.
rfdetr-mlx = ["screenpipe-redact/mlx-mac"]
jemalloc = ["tikv-jemallocator"]

[[bin]]
name = "screenpipe"
path = "src/bin/screenpipe-engine.rs"


[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Foundation",
    "Win32_System_StationsAndDesktops",
    "Win32_System_Com",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
] }
socket2 = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { git = "https://github.com/yury/cidre.git", features = ["ax", "ns", "av", "blocks"] }
tracing-oslog = { workspace = true }

[package.metadata.cargo-machete]
# screenpipe-redact is wired into the engine binary (image-PII
# reconciliation worker, screenpipe-engine.rs:1571).
ignored = []
