[package]
name = "screenpipe-app"
version = "2.4.135"
description = "24/7 memory for your desktop. 100% local."
authors = ["you"]
license = ""
repository = ""
default-run = "screenpipe-app"
edition = "2021"
rust-version = "1.92"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "=2.5.4", features = [] }

[dependencies]
tauri = { version = "=2.10.1", features = [
  "protocol-asset",
  "macos-private-api",
  "tray-icon",
  "devtools",
  "image-png",
  "image-ico",
  # Embedded child webview (the agent-controlled browser sidebar) requires
  # WindowBuilder::add_child, which is currently behind the unstable feature.
  "unstable",
] }
tauri-utils = { version = "=2.8.2", features = [] }
# plugins
tauri-plugin-fs = "=2.4.5"
tauri-plugin-notification = "=2.3.3"
tauri-plugin-updater = "=2.10.0"
tauri-plugin-dialog = "=2.6.0"
tauri-plugin-os = "=2.3.2"
tauri-plugin-process = "=2.3.1"
tauri-plugin-autostart = "=2.5.1"
tauri-plugin-shell = "=2.3.5"
tauri-plugin-store = "=2.4.2"
tauri-plugin-http = "=2.5.7"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

tower-http = { version = "0.4.0", features = ["cors", "trace"] }
http = "0.2"

# TypeScript bindings
specta = { version = "=2.0.0-rc.20", features = [
	"derive",
	"serde_json",
	"uuid",
] }
tauri-specta = { version = "=2.0.0-rc.20", features = ["derive", "typescript"] }
specta-typescript = "0.0.7"

# Logging
log = "0.4.17"

# Dark mode or light mode
dark-light = "2.0.0"

# Tokio
tokio = { version = "1.36.0", features = ["full"] }

# HTTP client
reqwest = { version = "=0.12.12", default-features = false, features = ["blocking", "multipart", "json", "rustls-tls", "rustls-tls-native-roots"] }

# tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"


sha2 = "0.10"
anyhow = "1.0.71"
arboard = "3.4"

# System information
sysinfo = "=0.29.0"

# hakc
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }

# server
axum = "0.6.0" # or your current version



dirs = "5.0.1"
tauri-plugin-deep-link = "=2.4.6"

once_cell = "1.20.0"
tauri-plugin-sentry = "0.5.0"
sentry = { version = "0.42", features = ["tracing"] }
regex = "1"
raw-window-handle = "0.6"

notify = "8.0.0"
futures = "0.3.30"
tokio-tungstenite = "0.24"

chrono = "0.4.39"
chrono-tz = "0.10"
tauri-plugin-opener = "2.5.3"
uuid = { version = "1.0", features = ["v4"] }
urlencoding = "2"
url = "2"
async-trait = "0.1"

# Cloud sync utilities
hostname = "0.4"

# Screenpipe core (for sync)
screenpipe-core = { path = "../../../crates/screenpipe-core", features = ["cloud-sync", "secrets"] }

# Embedded screenpipe server
screenpipe-config = { path = "../../../crates/screenpipe-config", features = ["specta"] }
screenpipe-engine = { path = "../../../crates/screenpipe-engine", default-features = false }
screenpipe-screen = { path = "../../../crates/screenpipe-screen" }
screenpipe-a11y = { path = "../../../crates/screenpipe-a11y" }
screenpipe-audio = { path = "../../../crates/screenpipe-audio" }
screenpipe-db = { path = "../../../crates/screenpipe-db" }
screenpipe-vault = { path = "../../../crates/screenpipe-vault" }
screenpipe-connect = { path = "../../../crates/screenpipe-connect" }
screenpipe-secrets = { path = "../../../crates/screenpipe-secrets" }
screenpipe-events = { path = "../../../crates/screenpipe-events" }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }
image = "0.25.5"
icalendar = "0.17"

# jemalloc — aggressively returns freed pages to OS, reducing RSS bloat
[target.'cfg(not(target_os = "windows"))'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-cli = "2.4.1"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-webdriver = { version = "0.2", optional = true }

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2.3.7", features = ["deep-link"] }
tauri-plugin-updater = "2.10.0"

[target.'cfg(target_os = "macos")'.dependencies]
tracing-oslog = "0.3.0"
core-foundation = "0.10"
cocoa = "0.26.0"
objc = "0.2.7"
block = "0.1"
base64 = "0.22.1"
# Fix macOS 26 Tahoe crash: ObjC method signatures changed from signed to unsigned
# integers, causing objc2 strict validation to panic inside tao's extern "C" callbacks
# (send_event, did_finish_launching) → panic_cannot_unwind → SIGABRT
# See: https://github.com/tauri-apps/tao/issues/1171
objc2 = { version = "0.6", features = ["relax-sign-encoding"] }
# bunch of hack for permissions
core-graphics-helmer-fork = "0.24.0"
nokhwa-bindings-macos = { git = "https://github.com/CapSoftware/nokhwa", rev = "0d3d1f30a78b" }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52.0"
lazy_static = "1.5.0"
image = "0.25.5"
windows-icons = { git = "https://github.com/tribhuwan-kumar/windows-icons.git" }
base64 = "0.22.1"
raw-window-handle = "0.6"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm",
    "Win32_Security_Cryptography",
] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18.1"
base64 = "0.22.1"
freedesktop-desktop-entry = "0.7.0"
freedesktop-icon-lookup = "0.1.3"
xdg = "2.5.2"
ini = "1.3"
resvg = "0.45.1"
image = "0.25.5"
futures-channel = "0.3.30"
lazy_static = "1.5.0"

[features]
default = ["custom-protocol", "qwen3-asr", "parakeet"]
metal = ["screenpipe-audio/metal"]
pulseaudio = ["screenpipe-audio/pulseaudio"]
directml = ["screenpipe-engine/directml"]
vulkan = ["screenpipe-audio/vulkan"]
cargo-clippy = []
e2e = ["tauri-plugin-webdriver"]

# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# Set by GitHub Actions release workflow - enables auto-updates
# Source builds without this flag will show "auto-updates unavailable"
official-build = []

# Enterprise build: updates managed by IT (Intune/RoboPack). Set by enterprise release workflow.
# Do NOT add official-build here — we skip all in-app update logic for enterprise.
enterprise-build = []

# On-device AI via Apple Foundation Models (macOS 26+ / Xcode 26+ only)
apple-intelligence = ["screenpipe-engine/apple-intelligence"]

qwen3-asr = ["screenpipe-engine/qwen3-asr"]
parakeet = ["screenpipe-engine/parakeet"]
# macOS only — requires Apple MLX (Metal)
parakeet-mlx = ["screenpipe-engine/parakeet-mlx"]
jemalloc = ["tikv-jemallocator"]


[package.metadata.cargo-machete]
ignored = ["tauri-utils", "screenpipe-a11y"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

# Fast local release builds: cargo build --profile release-dev
[profile.release-dev]
inherits = "release"
lto = "thin"
codegen-units = 16
incremental = true

# Faster dev builds
[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 2
